# hr_chatbot

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  requirements_dev.txt  scratch.ipynb
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 001_create_documents.py
app/: main.py
app/api/: dependencies.py  routes.py
app/bot/: handlers.py  teams_bot.py
app/config/: logging.py  settings.py
app/data/: ingestion.py
app/data/loaders/: pdf_loader.py  sharepoint_loader.py
app/exceptions/: errors.py
app/memory/: session_manager.py
app/memory/stores/: redis_store.py
app/models/: conversations_models.py  request_models.py  response_models.py
app/observability/: tracing.py
app/rag/: chunking.py  pipeline.py
app/security/: auth.py  pii_filter.py
app/services/: cache_service.py  conversation_service.py  embedding_service.py  llm_service.py  prompt_service.py  retrieval_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html  main.html
app/utils/: text_utils.py  token_utils.py
front_end/: next.config.ts  package-lock.json  package.json
front_end/app/: layout.tsx  page.tsx
front_end/app/chat/[id]/: page.tsx
front_end/components/: ChatInput.tsx  ChatPage.tsx  CodeBlock.tsx  MessageList.tsx  Sidebar.tsx
front_end/lib/: data.ts  types.ts
infra/docker/vectorstore/: Dockerfile
prompts/: hr_system_prompt.j2  test_hr_system_prompt.j2
scripts/: evals.py  get_auth_token.sh  ingest_data.py  init_db.py  run_local.sh  test.http
tests/: conftest.py  test_api.py  test_ingest_data.py  test_prompt_service.py  test_redis_store.py  test_services.py  test_session_manager.py
tests/test_docs/: HRPolicyHandbook.docx
